# riz

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
riz/: Cargo.toml
riz-core/: Cargo.toml
riz-tui/: Cargo.toml
riz-view/: Cargo.toml
riz/src/: main.rs
